refactor: update security config and adapter for traceability feature